[package]
name = "unitest"
version = "0.1.0"
authors = ["monsieurbadia <iam@monsieurbadia.com>"]
edition = "2018"

description = """
small and compact testing framework
"""

[lib]
name = "unitest"
path = "src/lib.rs"
doctest = false

[dependencies]
flume = "0.10.5"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
uwa = { git = "https://github.com/monsieurbadia/uwa" }

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "unitest"
path = "../../examples/testing.rs"
